# omilator

./: .gitignore  AGENTS.md  NEXT_STEPS.md  README.md  gradle.properties  settings.gradle.kts  setup-cores-android.sh  setup-cores.sh  setup-moltenvk.sh
.github/workflows/: build.yml
app-android/: build.gradle.kts
app-android/src/androidMain/: AndroidManifest.xml
app-android/src/androidMain/cpp/: CMakeLists.txt  libretro_jni.cpp
app-android/src/androidMain/kotlin/com/omilator/app/: MainActivity.kt
app-android/src/androidMain/res/values/: strings.xml
app-desktop/: build.gradle.kts  release-dmg.sh
app-desktop/src/desktopMain/kotlin/com/omilator/app/: Main.kt
core-audio/: build.gradle.kts
core-input/: build.gradle.kts
core-libretro/: build.gradle.kts
core-libretro/src/desktopMain/cpp/: omilator_log_bridge.c
core-libretro/src/nativeInterop/cinterop/: libretro.def  libretro.h  vulkan.def
core-render/: build.gradle.kts
data-launcher/: build.gradle.kts
data-library/: build.gradle.kts
data-saves/: build.gradle.kts
data-settings/: build.gradle.kts
gradle/: libs.versions.toml
iosApp/: Info.plist  iOSApp.swift  project.yml
iosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
iosApp/Omilator.xcodeproj/: project.pbxproj
ui-shared/: build.gradle.kts
ui-shared/src/commonMain/kotlin/com/omilator/ui/: OmilatorApp.kt  OmilatorTheme.kt  OmilatorTypography.kt
ui-shared/src/iosMain/kotlin/com/omilator/ui/: IosFilePicker.kt  IosPlayerScreen.kt  Log.kt  PendingPlay.kt  RootViewController.kt
(+63 files in other folders)
